# comet-heatmap

./: README.md  pyproject.toml  requirements.txt
src/comet_heatmap/: __init__.py  catalog.py  ephemerides.py  observability.py  plot.py  script.py  utils.py
src/comet_heatmap/lib/: CometEls.txt  jpl.csv  matrices.hdf5  mpc.csv
