[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comet-heatmap"
description = "A script to generate comet observability heatmap."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
requires-python = ">=3.7.3"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
dynamic = ["version", "dependencies"]

[project.scripts]
comet-heatmap = "comet_heatmap.script:run"

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/comet-heatmap"
"Tracker" = "https://github.com/RuiningZHAO/comet-heatmap/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
plpy = ["fire/lib/*", "bfosc/lib/**/*"]

[tool.setuptools.dynamic]
version = {attr = "comet_heatmap.__version__"}
dependencies = {file = "requirements.txt"}